fix(MobileModal): flexbox issues on mobile devices

--- a/assets/css/components/_modals.scss
+++ b/assets/css/components/_modals.scss
@@ -140,9 +140,9 @@
 // Blockchain Modal Overrides
 // --------------------------------------------------
 .bc-modal {
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
+  @extend .flex-important;
+  @extend .flex-justify;
+  @extend .flex-center;
   .modal-content { background: $light-blue; }
   .modal-dialog { width: 55vw; margin: 0 !important }
   &.small { .modal-dialog { width: 40vw; } }
